--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "all":"npm-run-all --parallel devserver start",  
       
     "compile:sass": "sass sass/main.scss css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
-    "compress:css": "sass css/style.prefix.css css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass prefix:css compress:css"
+    "concat:css":"concat -o css/style.concat.css css/josefinsans.300,400,400i.Nunito:300,300i.css css/style.comp.css",  
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
+    "compress:css": "sass css/style.prefix.css css/style.min.css --style compressed",
+    "remove:css":"rm -rf sass/main.css css/style.comp.css css/style.concat.css",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css compress:css remove:css remove-map-file"
   },
   "browser:option:liverserver":"live-server --browser=firefox",
   "author": "Jonas",
